if(BUILD_TESTING AND LAPS_BUILD_TESTS)
    add_subdirectory( doctest )
endif()

if("${LAPS_MOQ_BACKEND}" STREQUAL "QUICR")
    add_subdirectory(libquicr)
elseif("${LAPS_MOQ_BACKEND}" STREQUAL "MOXYGEN")
    include(cmake/CPM.cmake)
    CPMAddPackage("gh:openmoq/moxygen#main")
else()
    message(FATAL_ERROR "Unsupported backend (backend=${LAPS_MOQ_BACKEND}, supported=QUICR,MOXYGEN)")
endif()
